--- a/index.html
+++ b/index.html
@@ -102,9 +102,9 @@
 
   </table>
   <hr />
-  <h4><a href="C:\Users\amritans\Desktop\web devlopment folder\HTML-personal file\hobies.html">My Hobbies</a></h4>
+  <h4><a href="hobies.html">My Hobbies</a></h4>
 
-  <h4><a href="C:\Users\amritans\Desktop\web devlopment folder\HTML-personal file\contact.html">Contact me </a> </h4>
+  <h4><a href="contact.html">Contact me </a> </h4>
 </body>
 
 </html>
